
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.4.29) stable; urgency=low

 * osfuncwin: WinIsUefi uses new function GetBiosMode if Windows Verison >= Windows10 2004. 
    This function calls the Windows API function GetFirmwareType to detect Bios mode
 * osparser: doLDAPSearch: callLDAP: if port 636 then use ssl
 * remove ldapsend.pas from opsi-script dir (use from synapse)
 * osfilehelper: MakeBakFiles: use two digit rotation numbers if log_rotation_count > 9
 * osconf: configuration: log_rotation_count (default = 8)
   will need new config: opsi-script.global.log_rotation_count to change (allowed 0 - 99)

-- d.oertel <d.oertel@uib.de> Mon, 18 Oct 2021 15:00


opsi-script (4.12.4.28) stable; urgency=low

 * osparser: do XMLPatch2Main: new xml2-section commands:
    * setNodePair <keyNodeName> <keyNodeTextContent> <valueNodeName> <valueNodeTextContent>
      used for Apple info.plist
 * osxmlsections: TuibXMLDocument: new:
    setNodePair(keyNodeName: string; keyNodeTextContent: string;
      valueNodeName: string; valueNodeTextContent: string): boolean;
 * Execwith: if there is a parameter '/HookScript <path to script file>',
   then the existing 'script file' will be called with the temporary file
   as parameter before passing it to the interpreter.
   The call of the hookscript has a 40 sec Timeout
 * osfunc: additional log at FileCheckDate
 * DPI awareness True/PM_V2
 * osparser: doAktionen: FBatchOberflaeche.LoadSkin(''); and Processmess to reload DPI scaling
 * osparser: execPowershellCall has now additionl parameter optionstr that may hold additional
    execwith parameters
 * osparser: getDecimalCompareSign (used by compareDotSeperatedNumbers):
     now support leading zeros (then it will handled as float starting with 0.)
     now support a letter as last part of the number (1.0.23b like is used at openssl versions)